--- a/www/layout.html
+++ b/www/layout.html
@@ -57,7 +57,7 @@
     </div>
     <br>
     <hr>
-    <p>All text used was written by Chat GPT, all images come from Unsplash</p>
+    <p>All copy used was written by ChatGPT, all images come from Unsplash</p>
     
   </body>
 </html>
