Blog section and updated navbar

--- a/www/navbar.html
+++ b/www/navbar.html
@@ -31,13 +31,13 @@
               <a class="nav-link active" aria-current="page" href="index.htm">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">About</a>
+              <a class="nav-link active" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Product</a>
+              <a class="nav-link active" href="products.html">Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="layout.html">Blog</a>
+              <a class="nav-link active" href="blog.html">Blog</a>
             </li>
             <form class="container-fluid">
               <button class="btn btn-outline-primary" type="button">Register</button>
