--- a/www/home.html
+++ b/www/home.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Home Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -12,36 +14,43 @@
 	
 	<header>
 	
-	<!-- background image
-		<div
-			class="bg-image img-fluid"
-			style="
-				background-image: url('https://images.unsplash.com/photo-1615415772324-d235a656a9e8?q=80&w=1833&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-				background-size: cover;
-				min-height: 60vh; 
-				position: relative;
-				color: white;
-				text-shadow: 2px 2px 2px rgba(0,0,0,.2);
-				"
-		>
-			<div 
-				class="d-flex flex-column"
-				style="
-					position: absolute;
-					width: 100%;
-					height: 100%;
-				">
-				<div class="row">
-					<h1 class="display-1">Duis aute irure dolor</h1>
-				</div>
-				<div class="row">
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.<p>
-				</div>
-			</div>
-		</div>
-	<!--- background image END -->	
-	
-	<!--BG IMAGE AGAIN -->
+	<nav class="navbar navbar-expand-lg" style="background-color: #ffffff;">
+		<div class="container-fluid">
+      
+        <!-- BRAND -->
+        <a class="navbar-brand" href="home.html">
+			<strong
+				style="letter-spacing: -0.02em;">
+				<i class="bi bi-egg-fried d-inline-block align-text-centre ps-2 pe-2" alt="logo"></i>Brandname</strong></a>
+        
+        <!-- COLLAPSING -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Blog</a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link active" href="#">
+				<i class="bi bi-envelope-fill d-inline-block align-text-centre pe-2"></i>Contact
+			  </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+	<!--BG IMAGE -->
 		<div 
 			class ="container-fluid d-inline-flex align-items-center"
 			style="
@@ -51,13 +60,18 @@
 				color: white;">
 			
 			<div class="container pt-5">
-				<h1 class="display-1">Duis aute irure&nbsp;dolor</h1>
+				<h1 
+				class="display-1"
+				style="letter-spacing: -0.02em;">
+				Duis aute irure&nbsp;dolor</h1>
+				<!-- is there a way to optically align the heading and body text on the left? I tried to add different margin values but the default incraments are to big :( -->
 				<div class="row col-md-10 col-lg-8 pb-2">
 				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 				</div>
 				<button type="button" class="btn btn-warning">Call to action</button>
 			</div>
 		</div>
+	<!--BG IMAGE END-->
 	
 	</header>
 	
