--- a/www/form.html
+++ b/www/form.html
@@ -11,9 +11,9 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 	
 	<div class="container mt-5">
-		<!-- Button trigger modal -->
+		<!-- Button trigger modal Sign in-->
 		<h5 class="mb-3">Modal</h5>
-		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#SignInModal">
+		<button type="button" class="btn btn-primary me-2" data-bs-toggle="modal" data-bs-target="#SignInModal">
 			Sign in
 		</button>
 
@@ -45,24 +45,122 @@
 			</div>
 		</div>
 		
+		<!-- Button trigger modal Register-->
+		<button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#RegisterModal">
+			Register
+		</button>
+
+		<!-- Modal -->
+		<div class="modal fade" id="RegisterModal" tabindex="-1" aria-labelledby="SignInModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h1 class="modal-title fs-5" id="exampleModalLabel">Register</h1>
+						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+						<form>
+							<div class="row g-3 mb-3">
+								<div class="col">
+									<label for="FirstName" class="form-label">First name</label>
+									<input type="text" class="form-control" id="FirstName" placeholder="First name" aria-label="First name">
+								</div>
+								<div class="col">
+									<label for="LastName" class="form-label">Last name</label>
+									<input type="text" class="form-control" id="LastName" placeholder="Last name" aria-label="Last name">
+								</div>
+							</div>
+							<div class="mb-3">
+								<label for="exampleInputEmail1" class="form-label">Email address</label>
+								<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="name@example.com">
+							</div>
+							<div class="mb-3">
+								<label for="exampleInputPassword1" class="form-label">Password	</label>
+								<input type="password" class="form-control" id="exampleInputPassword1" placeholder="********">
+							</div>
+							<div class="mb-3">
+								<label for="exampleInputPassword1" class="form-label">Confirm password</label>
+								<input type="password" class="form-control" id="exampleInputPassword1" placeholder="********">
+							</div>
+							<div class="col-12">
+								<div class="form-check">
+									<input class="form-check-input" type="checkbox" id="gridCheck">
+									<label class="form-check-label text-secondary" for="gridCheck">
+										By clicking register ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
+									</label>
+								</div>
+							</div>
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+						<button type="button" class="btn btn-warning">Register</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		
 	
 	</div>
-	<!--SIGN IN FORM -->
-	<form class="container-md mt-5">
-		<h5 class="mb-3">Sign in</h5>
-		<div class="mb-3">
-			<label for="exampleInputEmail1" class="form-label">Email address</label>
-			<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="name@example.com">
-		</div>
-		<div class="mb-3">
-			<label for="exampleInputPassword1" class="form-label">Password	</label>
-			<input type="password" class="form-control" id="exampleInputPassword1" placeholder="********">
-		</div>
-		<button type="submit" class="btn btn-primary">Sign in</button>
-	</form>
 	
-	<!--REGISTER FORM -->
-		
+	<div class="container mt-5">
+		<div class="row g-5">
+			<div class="col-md-6">
+			<!--SIGN IN FORM -->
+			<form>
+				<h5 class="mb-3">Sign in</h5>
+				<div class="md-2">
+					<label for="exampleInputEmail1" class="form-label">Email address</label>
+					<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="name@example.com">
+				</div>
+				<div class="mb-3">
+					<label for="exampleInputPassword1" class="form-label">Password	</label>
+					<input type="password" class="form-control" id="exampleInputPassword1" placeholder="********">
+				</div>
+				<button type="submit" class="btn btn-primary">Sign in</button>
+			</form>
+			</div>
+	
+			<!--REGISTER FORM -->
+			<div class="col-md-6">
+			<form>
+				<h5 class="mb-3">Register</h5>
+				<div class="row g-3 mb-3">
+					<div class="col">
+						<label for="FirstName" class="form-label">First name</label>
+						<input type="text" class="form-control" id="FirstName" placeholder="First name" aria-label="First name">
+					</div>
+					<div class="col">
+						<label for="LastName" class="form-label">Last name</label>
+						<input type="text" class="form-control" id="LastName" placeholder="Last name" aria-label="Last name">
+					</div>
+				</div>
+				<div class="mb-3">
+					<label for="exampleInputEmail1" class="form-label">Email address</label>
+					<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="name@example.com">
+				</div>
+				<div class="mb-3">
+					<label for="exampleInputPassword1" class="form-label">Password	</label>
+					<input type="password" class="form-control" id="exampleInputPassword1" placeholder="********">
+				</div>
+				<div class="mb-3">
+					<label for="exampleInputPassword1" class="form-label">Confirm password</label>
+					<input type="password" class="form-control" id="exampleInputPassword1" placeholder="********">
+				</div>
+				<div class="col-12 mb-3">
+					<div class="form-check">
+						<input class="form-check-input" type="checkbox" id="gridCheck">
+						<label class="form-check-label text-secondary" for="gridCheck">
+							By clicking register ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
+						</label>
+					</div>
+				</div>	
+				<button type="button" class="btn btn-warning">Register</button>
+			</form>
+			</div>
+		</div>
+	</div>
+	
 		
   </body>
 </html>
